--- a/inex.html
+++ b/inex.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MD Sakil Hasan's Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <section class="section1">
+        <div class="intro">
+            <div class="half-width">
+                <h2>Hello I'm</h2>
+                <h1 class="heading">MD Sakil Hassan</h1>
+                <p>I'm a entry level Web Developer but I can build you a good quality website with better market value.
+                </p>
+                <a class="link-btn" href="www.linkedin.com/in/md-sakil-hasan" target="_blank">Me on LinkedIn</a>
+            </div>
+            <div class="half-width">
+                <img src="images2/image 11.png" alt="MD Sakil Hasan">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="section2">
+        <div class="biography">
+            <div class="half-width">
+                <img src="images2/sakil2.png" alt="MD Sakil Hasan">
+            </div>
+            <div class="half-width">
+                <div class="bigraphy-article">
+                    <h2>Biography</h2>
+                    <h3>I'm a student of ProgremmingHero and I try to learn Web Developing very hard.</h3>
+                    <p>Last few days I tried
+                        hard
+                        and learn html and css quite well, I also checked out and got help from other resources.</p>
+                    <a class="link-btn" href="www.facebook.com/mr.lunatic.superman">Me on Facebook</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="section3">
+        <div class="works">
+            <div class="work-h2">
+                <h2>My Latest Works</h2>
+            </div>
+            <div class="img-box">
+                <div class="box-img"><img src="images/latest-work/work-1.png" height="400px" width="600px"></div>
+                <div class="box-img"><img src="images/latest-work/work-2.jpg" height="400px" width="600px"></div>
+                <div class="box-img"><img src="images/latest-work/work-3.jpg" height="400px" width="600px"></div>
+            </div>
+        </div>
+    </section>
+<br>
+<br>
+<br><br>
+
+    <section class="section4">
+        <div class="client-comment">
+            <div class="heading">
+                <H1>What Client are say</H1>
+            </div>
+            <br>
+            <div>
+                <h3>Bruce Moccy</h3>
+                <h4>Founder & CEO Alies</h4>
+            </div>
+            <div>
+                <p>"I don't know what he said but I have to write something here, so I wrote something that is on my
+                    mind"
+                </p>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="msg-box">
+            <h4>Leave a massage in the</h4>
+            <h2>mdsakihasab833@gmail.com</h2>
+        </div>
+        <footer>&copy MD Sakil Hasan | 2020</footer>
+    </section>
+
+   
+        
     
 </body>
+
 </html>
